mp5/nightly.txt
Compilation Results:
********************
prog5.c: In function ‘start_game’:
prog5.c:124:16: error: ‘solution’ undeclared (first use in this function)
   pool[temp] = solution[i];
                ^
prog5.c:124:16: note: each undeclared identifier is reported only once for each function it appears in
prog5.c: At top level:
prog5.c:151:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘int’
 int make_guess (const char guess_str[]) {
 ^
prog5.c: In function ‘start_game’:
prog5.c:124:16: error: ‘solution’ undeclared (first use in this function)
   pool[temp] = solution[i];
                ^
prog5.c:124:16: note: each undeclared identifier is reported only once for each function it appears in
prog5.c: At top level:
prog5.c:151:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘int’
 int make_guess (const char guess_str[]) {
 ^
This nightly test is focusing on compilation error not functionality test.
This nightly report only tests on the released testcases.
There are many hidden edge testcase for the MP. Please test it yourselve.
HIGHLY RECOMMEND YOU TO START YOUR MP EARLY!!!!!!!
Timestamp: 2021-03-14_13:23:23
